--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,11 @@
 #HeaderContainer {
-    background-color: rgb(172, 116, 239);
-    height: 70px;
+    background-color: rgb(222, 208, 240);
+    height: 10vh;
 }
 
 #HeaderContainer > ul {
     position: relative;
-    top:24px;
+    top:10px;
 }
 
 #HeaderContainer > ul > li {
